--- a/abccaretreatmenteffects_report_main_appendix.tex
+++ b/abccaretreatmenteffects_report_main_appendix.tex
@@ -4,7 +4,7 @@
 \externaldocument{abccaretreatmenteffects_report_main}
 
 \begin{document}
-\title{\Large \textbf{Appendix: \\ Analyzing the Short and Long-term Effects of Early Childhood Education on Multiple Dimensions of Human Development}}
+\title{\Large \textbf{Appendix: \\ Analyzing the Short- and Long-term Effects of Early Childhood Education on Multiple Dimensions of Human Development}}
 
 \author{
 Jorge Luis Garc\'{i}a\\
@@ -23,13 +23,12 @@ The University of Chicago}
 \date{First Draft: April 16, 2016\\ This Draft: \today}
 \maketitle
 
-\doublespacing
 %\pagebreak
 \tableofcontents
 \listoffigures
 \listoftables
 \pagebreak
-
+\doublespacing
 
 %Input Appendices
 \begin{appendices}
