--- a/output/tables/abccare/rslt_female_counts.tex
+++ b/output/tables/abccare/rslt_female_counts.tex
@@ -14,7 +14,7 @@
     \midrule 
 
     \\[0.1cm]
-    \mc{1}{l}{\footnotesize{\% Pos. TE}} & \mc{1}{c}{\footnotesize{79}} & \mc{1}{c}{\footnotesize{78}} & \mc{1}{c}{\footnotesize{81}} & \mc{1}{c}{\footnotesize{80}} & \mc{1}{c}{\footnotesize{81}} & \mc{1}{c}{\footnotesize{73}} & \mc{1}{c}{\footnotesize{72}} & \mc{1}{c}{\footnotesize{70}} \\  
+    \mc{1}{l}{\footnotesize{\% Positive Treatment Effect}} & \mc{1}{c}{\footnotesize{79}} & \mc{1}{c}{\footnotesize{78}} & \mc{1}{c}{\footnotesize{81}} & \mc{1}{c}{\footnotesize{80}} & \mc{1}{c}{\footnotesize{81}} & \mc{1}{c}{\footnotesize{73}} & \mc{1}{c}{\footnotesize{72}} & \mc{1}{c}{\footnotesize{70}} \\  
 
     \mc{1}{l}{\footnotesize{$H_0$: $\le$ 25\%}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} \\  
 
