correcting some mistakes of the results

--- a/abccaretreatmenteffects_report_main.tex
+++ b/abccaretreatmenteffects_report_main.tex
@@ -66,7 +66,7 @@ The University of Chicago}
 
 \noindent The effects are even stronger when accounting for treatment substitution by the families of the children who were randomized out of the main treatment  the programs offered. These effects better inform policy because they evaluate the effectiveness of the programs with respect to a well-defined counterfactual, and not as implemented.\\ 
 
-\noindent To illustrate how accounting for treatment substitution strengthens the effects, consider one outcome for females and one outcome for males: high-school graduation and labor income at age 30, respectively. For high-school graduation rate of females, the average treatment effect when not accounting for treatment substitution amounts to an increase of 22\%; the increase is 35\% when accounting for treatment substitution. For labor income at age 30 for males, the average treatment effect of the programs is 6,055 (2014 USD) when not accounting for treatment substitution and 11,310 (2014 USD) when accounting for treatment substitution. This pattern sustains for a vast majority of the outcomes we consider.\\ 
+\noindent To illustrate how accounting for treatment substitution strengthens the effects, consider one outcome for females and one outcome for males: high-school graduation and labor income at age 30, respectively. For high-school graduation rate of females, the average treatment effect when not accounting for treatment substitution amounts to an increase of 22 percentage points ($p$-value = .039); the increase amounts to 35 percentage points when accounting for treatment substitution ($p$-value = .020). For labor income for males, the average treatment effect of the programs is \$6,055 ($p$-value = .098) when not accounting for treatment substitution and \$11,310 ($p$-value = .039) when accounting for treatment substitution.\footnote{We measure labor income in 2014 USD.} This pattern sustains for a vast majority of the outcomes we consider.\\
 
 \noindent We also test various hypotheses to assess the effectiveness of the second phase of randomization. The effectiveness of the first phase of treatment is much stronger compared to that of the second. ABC and CARE were much more effective when intervening before age 5, rather than between 5 and 8.\\
 
